--- a/style.css
+++ b/style.css
@@ -1,29 +1,26 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
 body {
     background-color:#2a607c;
+    margin: 0;
+    padding: 0;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #3E5575;
     color: #ffffff;
-    text-decoration: underline;
 }
 
 header h1 {
     display: inline-block;
     font-size: 48px;
+    padding-left: 25px;
 }
+
 header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     font-size: 20px;
+    text-decoration:underline;
 }
 
 header nav ul li {
@@ -35,4 +32,8 @@ header nav ul li {
 a {
     color: #ffffff;
     text-decoration: none;
+}
+header img {
+    width: 100%;
+    height: 200px;
 }
