--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
+:root {
+    --peach: #F5D4AB;
+    --teal: #499FA4;
+    --olive: #4F3F1F;
+    --orange: #a87309;
+}
+
 body {
-    background-color:#2a607c;
+    background-color:var(--peach);
     margin: 0;
     padding: 0;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+h1, h2 {
+    color: var(--orange);
+}
 header {
-    background-color: #3E5575;
-    color: #ffffff;
+    background-color: var(--teal);
 }
 
 header h1 {
@@ -20,20 +29,29 @@ header nav {
     margin-right: 20px;
     float: right;
     font-size: 20px;
-    text-decoration:underline;
 }
 
 header nav ul li {
     display: inline-block;
     margin-left: 25px;
     list-style-type: none;
+    text-decoration: underline solid black;
+    margin-top: 10px;
 }
 
 a {
-    color: #ffffff;
+    color: var(--olive);
     text-decoration: none;
 }
+
 header img {
     width: 100%;
-    height: 200px;
+    height: 300px;
+    display: block;
+}
+
+.about-me {
+    display:inline-block;
+    
+    
 }
