added CSS for about-me section

--- a/style.css
+++ b/style.css
@@ -3,15 +3,26 @@
     --teal: #499FA4;
     --olive: #4F3F1F;
     --orange: #a87309;
+    --dark-orange: #734F07;
 }
 
 body {
     background-color:var(--peach);
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
 h1, h2 {
+    color: var(--dark-orange)
+}
+
+h2 {
+    font-size: 30px;
+}
+
+p {
+    font-size: 20px;
     color: var(--orange);
 }
 header {
@@ -35,23 +46,53 @@ header nav ul li {
     display: inline-block;
     margin-left: 25px;
     list-style-type: none;
-    text-decoration: underline solid black;
+    text-decoration: underline solid var(--dark-orange);
     margin-top: 10px;
 }
 
 a {
-    color: var(--olive);
+    color: var(--orange);
     text-decoration: none;
+}
+
+a:hover {
+    color: white;
 }
 
 header img {
     width: 100%;
     height: 300px;
     display: block;
+    border: 4px 0px 0px 4px solid black;
 }
 
 .about-me {
-    display:inline-block;
-    
-    
+    display: inline-flex;
+    position: relative;
+    white-space: pre-line;
 }
+
+.about-me p {
+    border-left: 6px solid black;
+    margin-left: 20px;
+    padding-left: 10px;
+}
+.about-me h2 {
+    float: left;
+    padding-left: 10px;
+}
+
+/*@media screen and (max-width: 768px) {
+    header, main {
+      flex-direction: column;
+    }
+  
+    section {
+      padding-right: 0;
+    }
+  
+    aside {
+      width: 100%;
+      text-align: center;
+    }
+  }*/
