--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 h1, h2 {
-    color: var(--dark-orange)
+    color: var(--dark-orange);
 }
 
 h2 {
@@ -63,23 +63,58 @@ header img {
     width: 100%;
     height: 300px;
     display: block;
-    border: 4px 0px 0px 4px solid black;
+    border-top: 4px solid black;
+    border-bottom: 4px solid black;
 }
 
-.about-me {
+#about-me {
     display: inline-flex;
     position: relative;
     white-space: pre-line;
+    padding-left: 30px;
 }
 
-.about-me p {
+#about-me p {
     border-left: 6px solid black;
     margin-left: 20px;
     padding-left: 10px;
 }
-.about-me h2 {
+
+#about-me h2 {
     float: left;
-    padding-left: 10px;
+    padding-left: 30px;
+    padding-top: 10px;
+}
+
+#work h2 {
+    text-align: center;
+    text-decoration: underline 6px solid black;
+}
+
+#work-preview {
+    position: relative;
+    display: block;
+    padding-left: 60px;
+}
+
+#work-preview img {
+    border: 4px solid black;
+}
+
+#contact-me h2 {
+    padding-left: 30px;
+    padding-top: 10px;
+    text-align:center;
+}
+
+#contact-me ul{
+    font-size: 20px;
+    position: relative;
+    display: flex;
+    border: 4px solid black;
+    justify-content: space-evenly;
+    text-align: center;
+    list-style-type: none;
 }
 
 /*@media screen and (max-width: 768px) {
