--- a/style.css
+++ b/style.css
@@ -61,16 +61,16 @@ a:hover {
 
 header img {
     width: 100%;
-    height: 300px;
     display: block;
     border-top: 4px solid black;
     border-bottom: 4px solid black;
+    max-width: 100%;
+    height: auto;
 }
 
 #about-me {
     display: inline-flex;
     position: relative;
-    white-space: pre-line;
     padding-left: 30px;
 }
 
@@ -86,6 +86,12 @@ header img {
     padding-top: 10px;
 }
 
+#about-me img {
+    margin-left: 30px;
+    border-radius: 8px 8px 8px 8px;
+    margin-top: 5px;
+    border: 4px solid black;
+}
 #work h2 {
     text-align: center;
     text-decoration: underline 6px solid black;
@@ -95,6 +101,15 @@ header img {
     position: relative;
     display: block;
     padding-left: 60px;
+    text-align: center;
+}
+
+#main-project {
+    padding-right: 50px;
+}
+
+#filler-projects {
+    padding-right: 40px;
 }
 
 #work-preview img {
@@ -105,29 +120,31 @@ header img {
     padding-left: 30px;
     padding-top: 10px;
     text-align:center;
+    text-decoration: underline 6px solid black;
 }
 
 #contact-me ul{
     font-size: 20px;
     position: relative;
     display: flex;
-    border: 4px solid black;
     justify-content: space-evenly;
     text-align: center;
     list-style-type: none;
+    padding-right: 100px;
 }
 
-/*@media screen and (max-width: 768px) {
-    header, main {
-      flex-direction: column;
-    }
-  
-    section {
-      padding-right: 0;
-    }
-  
-    aside {
-      width: 100%;
-      text-align: center;
-    }
-  }*/
+#contact-me li {
+    border: 4px solid black;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+footer {
+    background-color: var(--teal);
+    justify-content: center;
+    display:flex;
+    margin-top: auto;
+    font-size:20px;
+    border-top: 4px solid black;
+    border-bottom: 4px
+}
