--- a/style.css
+++ b/style.css
@@ -70,7 +70,6 @@ header img {
 
 #about-me {
     display: inline-flex;
-    position: relative;
     padding-left: 30px;
 }
 
@@ -78,6 +77,8 @@ header img {
     border-left: 6px solid black;
     margin-left: 20px;
     padding-left: 10px;
+    display:flex;
+    align-items:center;
 }
 
 #about-me h2 {
@@ -91,6 +92,7 @@ header img {
     border-radius: 8px 8px 8px 8px;
     margin-top: 5px;
     border: 4px solid black;
+    margin-right: 100px;
 }
 #work h2 {
     text-align: center;
@@ -100,20 +102,23 @@ header img {
 #work-preview {
     position: relative;
     display: block;
-    padding-left: 60px;
     text-align: center;
-}
-
-#main-project {
-    padding-right: 50px;
+    margin:auto;
 }
 
 #filler-projects {
-    padding-right: 40px;
+    display:flex;
+    flex-flow:row wrap;
+    margin:auto;
+    justify-content:space-around;
 }
 
 #work-preview img {
     border: 4px solid black;
+}
+
+#filler-projects img {
+    width:300px;
 }
 
 #contact-me h2 {
@@ -147,4 +152,14 @@ footer {
     font-size:20px;
     border-top: 4px solid black;
     border-bottom: 4px
+}
+
+@media screen and (max-width:769px) {
+    #filler-projects {
+        flex-flow: column nowrap;
+        align-items:center;
+    }
+    #work-preview {
+        width: 80vw;
+    }
 }
